# judah

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
judah/: conversaion_manager.py  conversation_runner.py  dependencies.py  main.py  openai_connector.py
judah/audio/: audio_input_engine.py  audio_output_engine.py
judah/connectors/: mcp_connector.py  todoist_connector.py
judah/conversation/: conversation_runner.py  prompt_builder.py
judah/functions/: call_mcp_tool.py  complete_todo_item.py  end_conversation.py  function_invoker.py  function_result.py  function_signal.py  get_todo_items.py  list_mcp_resources.py  list_mcp_tools.py  openai_function.py  tool.py
