[tool.poetry]
name = "judah"
version = "0.1.0"
description = ""
authors = ["Vincent Horvath <vhorvath2010@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.58.1"
speechrecognition = "^3.13.0"
pyaudio = "^0.2.14"
llvmlite = "^0.43.0"
numba = "^0.60.0"
openai-whisper = "^20240930"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
