[project]
name = "judah"
version = "0.1.0"
description = ""
authors = [{ name = "Vincent Horvath", email = "vhorvath2010@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "openai>=1.58.1,<2",
    "speechrecognition>=3.13.0,<4",
    "pyaudio>=0.2.14,<0.3",
    "llvmlite>=0.43.0,<0.44",
    "numba>=0.60.0,<0.61",
    "openai-whisper>=20240930,<20240931",
    "realtimetts[gtts, system]>=0.4.21,<0.5",
    "cffi>=1.17.1,<2",
    "todoist-api-python>=2.1.7,<3",
    "mcp[cli]>=1.6.0,<2",
    "soundfile>=0.13.1,<0.14",
]

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "mypy>=1.14.1,<2",
    "pre-commit>=4.0.1,<5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
